--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -5,16 +5,16 @@
 
 h2 { background: #f7f7f7; border-bottom: 1px solid #d7d7d7; font-size: 105% }
 dl { line-height: 1.3em; margin-left: 1em }
-dt { background: 3px 1px no-repeat; padding: 0 0 }
+dt { background: 3px 4px no-repeat; padding: 0 0 }
 dt :link, dt :visited {
- background: 3px 0 no-repeat;
+ background: 3px 4px no-repeat;
  border: none;
  color: #000;
  padding: 0 4px 2px 22px;
 }
 dt>:link, dt>:visited {
  /* Hide from IE/Win */
- background-position: 3px 1px;
+ background-position: 3px 4px;
  display: block;
 }
 dt :link:hover, dt :visited:hover { background-color: #eed; color: #000 }
@@ -24,8 +24,13 @@ dt em {
  font-style: normal;
  text-decoration: none;
 }
-dt .time { color: #777 }
-dd { font-size: 80%; margin: 0 0 .5em 5em; padding: 0 }
+dt .time { color: #999; font-size: 80%; }
+dd { 
+ font-size: 80%;
+ margin: 0 0 1em 9em;
+ padding: 0;
+ color: #776;
+}
 
 /* Apply icon background-image twice to avoid hover-flicker in IE/Win */
 dt.changeset, dt.changeset a { background-image: url(../changeset.png) !important }
