--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -5,7 +5,7 @@
 
 h2 { background: #f7f7f7; border-bottom: 1px solid #d7d7d7; font-size: 105% }
 dl { line-height: 1.3em; margin-left: 1em }
-dt { background: 3px 4px no-repeat; padding: 0 0 }
+dt { background: 3px 4px no-repeat; padding: 0 }
 dt :link, dt :visited {
  background: 3px 3px no-repeat;
  border: none;
@@ -27,7 +27,7 @@ dt em {
 dt .time { color: #999; font-size: 80%; }
 dd { 
  font-size: 80%;
- margin: 0 0 1em 9em;
+ margin: 0 0 .75em 5.5em;
  padding: 0;
  color: #776;
 }
