--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -15,11 +15,17 @@
 #ticket h2 { margin: 0 0 1em }
 #ticket .date { color: #996; float: right; font-size: 85%; position: relative }
 
-#ticket table { table-layout: fixed; border-collapse: collapse; width: 100% }
+#ticket table {
+ border-top: 1px solid #dd9;
+ border-collapse: collapse;
+ table-layout: fixed;
+ width: 100%;
+}
 #ticket tr { border-bottom: 1px dotted #eed }
 #ticket td, #ticket th { font-size: 80%; padding: .5em 1em; vertical-align: top }
-#ticket th { color: #996; font-weight: normal; text-align: left }
-#ticket hr { color: #dd9; border-color: #dd9; border-width: 1px 0 0; height: 1px; margin: .5em 0 0 }
+#ticket th { color: #663; font-weight: normal; text-align: left; width: 20% }
+#ticket td { width: 30% }
+#ticket .description { border-top: 1px solid #dd9 }
 
 #attachments { border: 1px outset #996; padding: 1em }
 #attachments .attachments { list-style: square; margin-left: 2em; padding: 0 }
