--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -3,7 +3,12 @@
 * html #prefs { width: 34em } /* Set width only for IE */
 #prefs .buttons { margin-top: -1.6em }
 
-h2 { background: #f7f7f7; border-bottom: 1px solid #d7d7d7; font-size: 105% }
+h2 {
+ background: #f7f7f7;
+ border-bottom: 1px solid #d7d7d7;
+ font-size: 105%;
+ margin: 2em 0 .5em;
+}
 dl { line-height: 1.3em; margin-left: 1em }
 dt { background: 3px 4px no-repeat; padding: 0 }
 dt :link, dt :visited {
