--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -13,8 +13,8 @@ h1, h2, h3, h4 {
  letter-spacing: -0.018em;
 }
 h1 { font-size: 19px; margin: .15em 1em 0 0 }
-h2 { font-size: 16px; margin: 2em 0 .5em }
-h3 { font-size: 14px; margin: 1.5em 0 .5em }
+h2 { font-size: 16px }
+h3 { font-size: 14px }
 hr { border: none;  border-top: 1px solid #ccb; margin: 2em 0 }
 address { font-style: normal }
 img { border: none }
