--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -13,6 +13,19 @@
 #delete { margin-left: 6em }
 #preview { background: #f4f4f4 url(../draft.png); margin: 1em 0 2em }
 
+/* Heading anchors */
+.anchor:link, .anchor:visited {
+ border: none;
+ color: #d7d7d7;
+ font-size: .8em;
+ vertical-align: text-top;
+ visibility: hidden;
+}
+h1:hover .anchor, h2:hover .anchor, h3:hover .anchor,
+h4:hover .anchor, h5:hover .anchor, h6:hover .anchor {
+ visibility: visible;
+}
+
 /* Styles for the page history table
    (extends the styles for "table.listing") */
 #wikihist td { padding: 0 .5em }
