--- a/htdocs/css/roadmap.css
+++ b/htdocs/css/roadmap.css
@@ -14,51 +14,52 @@ p.percent { font-size: 10px; line-height: 2.4em; margin: 0.9em 0 0 }
 /* Styles for the roadmap view */
 ul.milestones { margin: 2em 0 0; padding: 0 }
 li.milestone { list-style: none; margin-bottom: 4em }
-li.milestone .info { white-space: nowrap }
-li.milestone .info h2 {
+.milestone .info { white-space: nowrap }
+.milestone .info h2 {
  background: #f7f7f7;
  border-bottom: 1px solid #d7d7d7;
  margin: 0;
 }
-li.milestone .info h2 :link, li.milestone .info h2 :visited {
+.milestone .info h2 :link, .milestone .info h2 :visited {
  color: #000;
  display: block;
  border-bottom: none;
 }
-li.milestone .info h2 :link:hover, li.milestone .info h2 :visited:hover {
+.milestone .info h2 :link:hover, .milestone .info h2 :visited:hover {
  color: #000;
 }
-li.milestone .info h2 em { color: #b00; font-style: normal }
-li.milestone .info .date {
+.milestone .info h2 em { color: #b00; font-style: normal }
+.milestone .info .date {
  color: #888;
  font-size: 11px;
  font-style: italic;
  margin: 0;
 }
-li.milestone .info .progress { margin: 1em 1em 0; width: 40em; max-width: 80% }
-li.milestone .info dl {
+.milestone .info .progress { margin: 1em 1em 0; width: 40em; max-width: 70% }
+.milestone .info dl {
  font-size: 10px;
  font-style: italic;
  margin: 0 1em 2em;
  white-space: nowrap;
 }
-li.milestone .info dt { display: inline; margin-left: .5em }
-li.milestone .info dd { display: inline; margin: 0 1em 0 .5em }
-li.milestone .description { margin-left: 1em }
+.milestone .info dt { display: inline; margin-left: .5em }
+.milestone .info dd { display: inline; margin: 0 1em 0 .5em }
+.milestone .description { margin-left: 1em }
 
 /* Styles for the milestone view */
 .milestone .date { color: #888; font-style: italic; margin: 0 }
 .milestone .description { margin: 1em 0 2em }
 
 /* Styles for the milestone statistics table */
-#stats { float: right; margin: 0 0 2em 2em; width: 300px }
+#stats { float: right; margin: 0 0 2em 2em; width: 500px; max-width: 30% }
+#stats legend { white-space: nowrap }
 #stats table { border-collapse: collapse; width: 100% }
 #stats th, #stats td { font-size: 10px; padding: 0; white-space: nowrap }
 #stats th { text-align: right; text-transform: capitalize }
 #stats th :link, #stats th :visited { border: none }
 #stats td { padding-left: 0.5em; width: 100% }
 #stats td div.progress { margin: 3px 4px 3px 0 }
-#stats td p.percent { letter-spacing: -.1em; line-height: 1.2em; margin-top: .4em }
+#stats td p.percent { line-height: 1.2em; margin-top: .4em }
 
 /* Styles for the milestone edit form */
 #edit fieldset { margin: 1em 0 }
