--- a/xref-branch/htdocs/css/trac.css
+++ b/xref-branch/htdocs/css/trac.css
@@ -45,6 +45,8 @@ h4 :link, h4 :visited, h5 :link, h5 :visited, h6 :link, h6 :visited {
 .ext-link { background: url(../extlink.gif) no-repeat 0 58%; padding-left: 16px }
 * html .ext-link { background-position: 0 .35em } /* IE hack, see #937 */
 
+.relation { text-decoration: underline }
+
 /* Forms */
 input, textarea, select { margin: 2px }
 input, select { vertical-align: middle }
