--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -2,6 +2,7 @@
 @import url(diff.css);
 
 * html #prefs { width: 34em } /* Set width only for IE */
+#prefs fieldset label { display: block }
 #prefs .buttons { margin-top: -1.6em }
 
 /* Browser */
