--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -4,6 +4,7 @@
 * html #prefs { width: 34em } /* Set width only for IE */
 #prefs fieldset label { display: block }
 #prefs .buttons { margin-top: -1.6em }
+#prefs .choice { margin-top: -0.6em }
 
 /* Browser */
 h1 { margin: 0; padding: 0 0 .5em }
